# Humanix

./: .gitignore  CMakeLists.txt  README.md
include/humanix/: command.h  dispatcher.h  utils.h
src/commands/: copy.cpp  crt.cpp  delete.cpp  env.cpp  find.cpp  grep.cpp  jobs.cpp  list.cpp  move.cpp  own.cpp  perm.cpp  process.cpp  show.cpp  sys.cpp  text.cpp
src/humanix/: dispatcher.cpp  main.cpp
